@@ -191,7 +191,11 @@ ifeq (, $(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	# temp-install wants to be invoked from a top-level make, unset MAKELEVEL here
 	# hurd doesn't implement semaphores shared between processes yet; succeed anyway so they at least have libpq5
 	# plperl currently fails on kfreebsd-*
-	unset LANG LC_CTYPE MAKELEVEL; if ! make -C build check-world EXTRA_REGRESS_OPTS='--port=$(shell perl -le 'print 1024 + int(rand(64000))')'; then \
+	unset LANG LC_CTYPE MAKELEVEL; \
+	if ! make -C build check-world \
+	  EXTRA_REGRESS_OPTS='--port=$(shell perl -le 'print 1024 + int(rand(64000))')' \
+	  PROVE_FLAGS="--verbose"; \
+	then \
 	    for l in `find build \( -name regression.diffs -o -name initdb.log -o -name postmaster.log \) | perl -we 'print map { "$$_\n"; } sort { (stat $$a)[9] <=> (stat $$b)[9] } map { chomp; $$_; } <>' | tail -3`; do \
 		echo "******** $$l ********"; \
 		cat $$l; \
